--- a/_modules/iceprod/server/config.html
+++ b/_modules/iceprod/server/config.html
@@ -141,7 +141,7 @@
 <span class="n">logger</span> <span class="o">=</span> <span class="n">logging</span><span class="o">.</span><span class="n">getLogger</span><span class="p">(</span><span class="s">&#39;config&#39;</span><span class="p">)</span>
 
 
-<div class="viewcode-block" id="locateconfig"><a class="viewcode-back" href="../../../server/config.html#iceprod.server.config.locateconfig">[docs]</a><span class="k">def</span> <span class="nf">locateconfig</span><span class="p">(</span><span class="n">filename</span><span class="o">=</span><span class="s">&#39;iceprod_config.json&#39;</span><span class="p">):</span>
+<div class="viewcode-block" id="locateconfig"><a class="viewcode-back" href="../../../server/config.html#iceprod.server.config.locateconfig">[docs]</a><span class="k">def</span> <span class="nf">locateconfig</span><span class="p">(</span><span class="n">filename</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;Locate a config file&quot;&quot;&quot;</span>
     <span class="n">cfgpaths</span> <span class="o">=</span> <span class="p">[</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">expandvars</span><span class="p">(</span><span class="s">&#39;$I3PROD&#39;</span><span class="p">)]</span>
     <span class="k">if</span> <span class="n">os</span><span class="o">.</span><span class="n">getcwd</span><span class="p">()</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">cfgpaths</span><span class="p">:</span>
@@ -182,14 +182,16 @@
         <span class="k">if</span> <span class="n">filename</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">filename</span> <span class="o">=</span> <span class="n">filename</span>
         <span class="k">else</span><span class="p">:</span>
+            <span class="n">basename</span> <span class="o">=</span> <span class="s">&#39;iceprod_config.json&#39;</span>
             <span class="k">try</span><span class="p">:</span>
-                <span class="bp">self</span><span class="o">.</span><span class="n">filename</span> <span class="o">=</span> <span class="n">locateconfig</span><span class="p">()</span>
+                <span class="bp">self</span><span class="o">.</span><span class="n">filename</span> <span class="o">=</span> <span class="n">locateconfig</span><span class="p">(</span><span class="n">basename</span><span class="p">)</span>
             <span class="k">except</span><span class="p">:</span>
                 <span class="n">logger</span><span class="o">.</span><span class="n">warn</span><span class="p">(</span><span class="s">&#39;config file does not exist, so making a new one&#39;</span><span class="p">)</span>
                 <span class="k">if</span> <span class="s">&#39;I3PROD&#39;</span> <span class="ow">in</span> <span class="n">os</span><span class="o">.</span><span class="n">environ</span><span class="p">:</span>
-                    <span class="bp">self</span><span class="o">.</span><span class="n">filename</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">environ</span><span class="p">[</span><span class="s">&#39;I3PROD&#39;</span><span class="p">],</span><span class="s">&#39;etc&#39;</span><span class="p">,</span><span class="s">&#39;iceprod_config.json&#39;</span><span class="p">)</span>
+                    <span class="n">prefix</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">environ</span><span class="p">[</span><span class="s">&#39;I3PROD&#39;</span><span class="p">],</span> <span class="s">&#39;etc&#39;</span><span class="p">)</span>
                 <span class="k">else</span><span class="p">:</span>
-                    <span class="bp">self</span><span class="o">.</span><span class="n">filename</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">getcwd</span><span class="p">(),</span><span class="s">&#39;iceprod_config.json&#39;</span><span class="p">)</span>
+                    <span class="n">prefix</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">getcwd</span><span class="p">()</span>
+                <span class="bp">self</span><span class="o">.</span><span class="n">filename</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">prefix</span><span class="p">,</span> <span class="n">basename</span><span class="p">)</span>
 
         <span class="bp">self</span><span class="o">.</span><span class="n">validate</span> <span class="o">=</span> <span class="n">validate</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">loading</span> <span class="o">=</span> <span class="k">False</span>
