--- a/_modules/iceprod/server/plugins/condor.html
+++ b/_modules/iceprod/server/plugins/condor.html
@@ -146,7 +146,7 @@
 <span class="n">logger</span> <span class="o">=</span> <span class="n">logging</span><span class="o">.</span><span class="n">getLogger</span><span class="p">(</span><span class="s">&#39;condor&#39;</span><span class="p">)</span>
 
 
-<div class="viewcode-block" id="condor"><a class="viewcode-back" href="../../../../server/plugins/condor.html#iceprod.server.plugins.condor.condor">[docs]</a><span class="k">class</span> <span class="nc">condor</span><span class="p">(</span><span class="n">grid</span><span class="o">.</span><span class="n">grid</span><span class="p">):</span>
+<div class="viewcode-block" id="condor"><a class="viewcode-back" href="../../../../server/plugins/condor.html#iceprod.server.plugins.condor.condor">[docs]</a><span class="k">class</span> <span class="nc">condor</span><span class="p">(</span><span class="n">grid</span><span class="o">.</span><span class="n">BaseGrid</span><span class="p">):</span>
 
     <span class="c">### Plugin Overrides ###</span>
 
