--- a/core/i3exec.html
+++ b/core/i3exec.html
@@ -152,10 +152,6 @@
 </tr>
 <tr><td>&nbsp;</td><td>Specify config file</td></tr>
 <tr><td class="option-group" colspan="2">
-<kbd><span class="option">-v <var>VALIDATE</var></span>, <span class="option">--validate <var>VALIDATE</var></span></kbd></td>
-</tr>
-<tr><td>&nbsp;</td><td>Specify if the config file should be validated</td></tr>
-<tr><td class="option-group" colspan="2">
 <kbd><span class="option">-u <var>URL</var></span>, <span class="option">--url <var>URL</var></span></kbd></td>
 </tr>
 <tr><td>&nbsp;</td><td>URL of the iceprod server</td></tr>
@@ -173,6 +169,16 @@
 <tr><td class="option-group">
 <kbd><span class="option">--offline</span></kbd></td>
 <td>Enable offline mode (don&#8217;t talk with server)</td></tr>
+<tr><td class="option-group" colspan="2">
+<kbd><span class="option">--logfile <var>LOGFILE</var></span></kbd></td>
+</tr>
+<tr><td>&nbsp;</td><td>Specify the logfile to use</td></tr>
+<tr><td class="option-group">
+<kbd><span class="option">--job <var>JOB</var></span></kbd></td>
+<td>Index of the job to run</td></tr>
+<tr><td class="option-group">
+<kbd><span class="option">--task <var>TASK</var></span></kbd></td>
+<td>Name of the task to run</td></tr>
 </tbody>
 </table>
 </dd>
