--- a/_modules/iceprod/core/exe.html
+++ b/_modules/iceprod/core/exe.html
@@ -742,7 +742,7 @@
         <span class="c"># make subprocess to run the module</span>
         <span class="k">if</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">exists</span><span class="p">(</span><span class="n">constants</span><span class="p">[</span><span class="s">&#39;task_exception&#39;</span><span class="p">]):</span>
             <span class="n">os</span><span class="o">.</span><span class="n">remove</span><span class="p">(</span><span class="n">constants</span><span class="p">[</span><span class="s">&#39;task_exception&#39;</span><span class="p">])</span>
-        <span class="n">process</span> <span class="o">=</span> <span class="n">run_module</span><span class="p">(</span><span class="n">cfg</span><span class="p">,</span> <span class="n">env</span><span class="p">,</span> <span class="n">module</span><span class="p">)</span>
+        <span class="n">process</span> <span class="o">=</span> <span class="n">fork_module</span><span class="p">(</span><span class="n">cfg</span><span class="p">,</span> <span class="n">env</span><span class="p">,</span> <span class="n">module</span><span class="p">)</span>
         <span class="k">try</span><span class="p">:</span>
             <span class="n">interval</span> <span class="o">=</span> <span class="nb">float</span><span class="p">(</span><span class="n">cfg</span><span class="o">.</span><span class="n">config</span><span class="p">[</span><span class="s">&#39;options&#39;</span><span class="p">][</span><span class="s">&#39;stillrunninginterval&#39;</span><span class="p">])</span>
         <span class="k">except</span><span class="p">:</span>
@@ -785,7 +785,7 @@
             <span class="k">else</span><span class="p">:</span>
                 <span class="n">stats</span><span class="o">.</span><span class="n">update</span><span class="p">(</span><span class="n">new_stats</span><span class="p">)</span></div>
 
-<div class="viewcode-block" id="run_module"><a class="viewcode-back" href="../../../core/exe.html#iceprod.core.exe.run_module">[docs]</a><span class="k">def</span> <span class="nf">run_module</span><span class="p">(</span><span class="n">cfg</span><span class="p">,</span> <span class="n">env</span><span class="p">,</span> <span class="n">module</span><span class="p">):</span>
+<span class="k">def</span> <span class="nf">fork_module</span><span class="p">(</span><span class="n">cfg</span><span class="p">,</span> <span class="n">env</span><span class="p">,</span> <span class="n">module</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Modules are run in a forked process to prevent segfaults from killing IceProd.</span>
 <span class="sd">    Their stdout and stderr is dumped into the log file with prefixes on each</span>
@@ -913,7 +913,7 @@
         <span class="n">logger</span><span class="o">.</span><span class="n">warn</span><span class="p">(</span><span class="s">&#39;env = %r&#39;</span><span class="p">,</span> <span class="n">env</span><span class="p">)</span>
         <span class="k">return</span> <span class="n">subprocess</span><span class="o">.</span><span class="n">Popen</span><span class="p">(</span><span class="n">cmd</span><span class="p">,</span> <span class="n">env</span><span class="o">=</span><span class="n">env</span><span class="p">)</span>
     <span class="k">else</span><span class="p">:</span>
-        <span class="k">return</span> <span class="n">subprocess</span><span class="o">.</span><span class="n">Popen</span><span class="p">(</span><span class="n">cmd</span><span class="p">)</span></div>
+        <span class="k">return</span> <span class="n">subprocess</span><span class="o">.</span><span class="n">Popen</span><span class="p">(</span><span class="n">cmd</span><span class="p">)</span>
 </pre></div>
 
            </div>
