--- a/_modules/iceprod/server/grid.html
+++ b/_modules/iceprod/server/grid.html
@@ -151,7 +151,7 @@
 <span class="n">logger</span> <span class="o">=</span> <span class="n">logging</span><span class="o">.</span><span class="n">getLogger</span><span class="p">(</span><span class="s">&#39;grid&#39;</span><span class="p">)</span>
 
 
-<div class="viewcode-block" id="grid"><a class="viewcode-back" href="../../../server/grid.html#iceprod.server.grid.grid">[docs]</a><span class="k">class</span> <span class="nc">grid</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
+<div class="viewcode-block" id="BaseGrid"><a class="viewcode-back" href="../../../server/grid.html#iceprod.server.grid.BaseGrid">[docs]</a><span class="k">class</span> <span class="nc">BaseGrid</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Interface for a generic job distribution system.</span>
 <span class="sd">    Do not use this class directly.  Use one of the plugins.</span>
@@ -194,13 +194,13 @@
     <span class="c">### Public Functions ###</span>
 
     <span class="nd">@tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">coroutine</span>
-<div class="viewcode-block" id="grid.check_and_clean"><a class="viewcode-back" href="../../../server/grid.html#iceprod.server.grid.grid.check_and_clean">[docs]</a>    <span class="k">def</span> <span class="nf">check_and_clean</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+<div class="viewcode-block" id="BaseGrid.check_and_clean"><a class="viewcode-back" href="../../../server/grid.html#iceprod.server.grid.BaseGrid.check_and_clean">[docs]</a>    <span class="k">def</span> <span class="nf">check_and_clean</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Check and Clean the Grid&quot;&quot;&quot;</span>
         <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">check_iceprod</span><span class="p">()</span>
         <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">check_grid</span><span class="p">()</span></div>
 
     <span class="nd">@tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">coroutine</span>
-<div class="viewcode-block" id="grid.queue"><a class="viewcode-back" href="../../../server/grid.html#iceprod.server.grid.grid.queue">[docs]</a>    <span class="k">def</span> <span class="nf">queue</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+<div class="viewcode-block" id="BaseGrid.queue"><a class="viewcode-back" href="../../../server/grid.html#iceprod.server.grid.BaseGrid.queue">[docs]</a>    <span class="k">def</span> <span class="nf">queue</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Queue tasks to the grid&quot;&quot;&quot;</span>
         <span class="n">tasks</span> <span class="o">=</span> <span class="k">None</span>
 
@@ -293,7 +293,7 @@
     <span class="c">### Private Functions ###</span>
 
     <span class="nd">@tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">coroutine</span>
-<div class="viewcode-block" id="grid.check_iceprod"><a class="viewcode-back" href="../../../server/grid.html#iceprod.server.grid.grid.check_iceprod">[docs]</a>    <span class="k">def</span> <span class="nf">check_iceprod</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+<div class="viewcode-block" id="BaseGrid.check_iceprod"><a class="viewcode-back" href="../../../server/grid.html#iceprod.server.grid.BaseGrid.check_iceprod">[docs]</a>    <span class="k">def</span> <span class="nf">check_iceprod</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;check if any task is in a state for too long&quot;&quot;&quot;</span>
         <span class="n">tasks</span> <span class="o">=</span> <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">modules</span><span class="p">[</span><span class="s">&#39;db&#39;</span><span class="p">][</span><span class="s">&#39;queue_get_active_tasks&#39;</span><span class="p">](</span><span class="n">gridspec</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">gridspec</span><span class="p">)</span>
         <span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s">&#39;active tasks: %r&#39;</span><span class="p">,</span><span class="n">tasks</span><span class="p">)</span>
@@ -409,7 +409,7 @@
                 <span class="k">raise</span> <span class="n">ret</span></div>
 
     <span class="nd">@tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">coroutine</span>
-<div class="viewcode-block" id="grid.check_grid"><a class="viewcode-back" href="../../../server/grid.html#iceprod.server.grid.grid.check_grid">[docs]</a>    <span class="k">def</span> <span class="nf">check_grid</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+<div class="viewcode-block" id="BaseGrid.check_grid"><a class="viewcode-back" href="../../../server/grid.html#iceprod.server.grid.BaseGrid.check_grid">[docs]</a>    <span class="k">def</span> <span class="nf">check_grid</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;check the queueing system for problems&quot;&quot;&quot;</span>
         <span class="k">if</span> <span class="p">(</span><span class="s">&#39;submit_pilots&#39;</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">cfg</span><span class="p">[</span><span class="s">&#39;queue&#39;</span><span class="p">]</span> <span class="ow">and</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">cfg</span><span class="p">[</span><span class="s">&#39;queue&#39;</span><span class="p">][</span><span class="s">&#39;submit_pilots&#39;</span><span class="p">]):</span>
@@ -588,7 +588,7 @@
             <span class="k">yield</span> <span class="n">resource</span>
 
     <span class="nd">@tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">coroutine</span>
-<div class="viewcode-block" id="grid.add_tasks_to_pilot_lookup"><a class="viewcode-back" href="../../../server/grid.html#iceprod.server.grid.grid.add_tasks_to_pilot_lookup">[docs]</a>    <span class="k">def</span> <span class="nf">add_tasks_to_pilot_lookup</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">tasks</span><span class="p">):</span>
+<div class="viewcode-block" id="BaseGrid.add_tasks_to_pilot_lookup"><a class="viewcode-back" href="../../../server/grid.html#iceprod.server.grid.BaseGrid.add_tasks_to_pilot_lookup">[docs]</a>    <span class="k">def</span> <span class="nf">add_tasks_to_pilot_lookup</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">tasks</span><span class="p">):</span>
         <span class="n">task_reqs</span> <span class="o">=</span> <span class="p">{}</span>
         <span class="n">task_iter</span> <span class="o">=</span> <span class="n">itertools</span><span class="o">.</span><span class="n">izip</span><span class="p">(</span><span class="n">tasks</span><span class="o">.</span><span class="n">keys</span><span class="p">(),</span>
                                    <span class="bp">self</span><span class="o">.</span><span class="n">_get_resources</span><span class="p">(</span><span class="n">tasks</span><span class="o">.</span><span class="n">values</span><span class="p">()))</span>
@@ -602,7 +602,7 @@
             <span class="k">raise</span> <span class="n">ret</span></div>
 
     <span class="nd">@tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">coroutine</span>
-<div class="viewcode-block" id="grid.setup_pilots"><a class="viewcode-back" href="../../../server/grid.html#iceprod.server.grid.grid.setup_pilots">[docs]</a>    <span class="k">def</span> <span class="nf">setup_pilots</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">tasks</span><span class="p">):</span>
+<div class="viewcode-block" id="BaseGrid.setup_pilots"><a class="viewcode-back" href="../../../server/grid.html#iceprod.server.grid.BaseGrid.setup_pilots">[docs]</a>    <span class="k">def</span> <span class="nf">setup_pilots</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">tasks</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Setup pilots for the task reqs&quot;&quot;&quot;</span>
         <span class="n">debug</span> <span class="o">=</span> <span class="k">False</span>
         <span class="k">if</span> <span class="p">(</span><span class="s">&#39;queue&#39;</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">cfg</span> <span class="ow">and</span> <span class="s">&#39;debug&#39;</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">cfg</span><span class="p">[</span><span class="s">&#39;queue&#39;</span><span class="p">]</span>
@@ -662,7 +662,7 @@
                 <span class="n">logger</span><span class="o">.</span><span class="n">error</span><span class="p">(</span><span class="s">&#39;error submitting pilots&#39;</span><span class="p">,</span> <span class="n">exc_info</span><span class="o">=</span><span class="k">True</span><span class="p">)</span></div>
 
     <span class="nd">@tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">coroutine</span>
-<div class="viewcode-block" id="grid.setup_submit_directory"><a class="viewcode-back" href="../../../server/grid.html#iceprod.server.grid.grid.setup_submit_directory">[docs]</a>    <span class="k">def</span> <span class="nf">setup_submit_directory</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span><span class="n">task</span><span class="p">):</span>
+<div class="viewcode-block" id="BaseGrid.setup_submit_directory"><a class="viewcode-back" href="../../../server/grid.html#iceprod.server.grid.BaseGrid.setup_submit_directory">[docs]</a>    <span class="k">def</span> <span class="nf">setup_submit_directory</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span><span class="n">task</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Set up submit directory&quot;&quot;&quot;</span>
         <span class="c"># create directory for task</span>
         <span class="n">submit_dir</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">submit_dir</span>
@@ -717,7 +717,7 @@
             <span class="k">raise</span></div>
 
     <span class="nd">@tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">coroutine</span>
-<div class="viewcode-block" id="grid.write_cfg"><a class="viewcode-back" href="../../../server/grid.html#iceprod.server.grid.grid.write_cfg">[docs]</a>    <span class="k">def</span> <span class="nf">write_cfg</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span><span class="n">task</span><span class="p">):</span>
+<div class="viewcode-block" id="BaseGrid.write_cfg"><a class="viewcode-back" href="../../../server/grid.html#iceprod.server.grid.BaseGrid.write_cfg">[docs]</a>    <span class="k">def</span> <span class="nf">write_cfg</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span><span class="n">task</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Write the config file for a task&quot;&quot;&quot;</span>
         <span class="n">filename</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">task</span><span class="p">[</span><span class="s">&#39;submit_dir&#39;</span><span class="p">],</span><span class="s">&#39;task.cfg&#39;</span><span class="p">)</span>
 
@@ -795,7 +795,7 @@
         <span class="k">raise</span> <span class="n">tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">Return</span><span class="p">(</span><span class="n">ret</span><span class="p">)</span></div>
 
     <span class="c"># not async: called from executor</span>
-<div class="viewcode-block" id="grid.get_submit_args"><a class="viewcode-back" href="../../../server/grid.html#iceprod.server.grid.grid.get_submit_args">[docs]</a>    <span class="k">def</span> <span class="nf">get_submit_args</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span><span class="n">task</span><span class="p">,</span><span class="n">cfg</span><span class="o">=</span><span class="k">None</span><span class="p">,</span><span class="n">passkey</span><span class="o">=</span><span class="k">None</span><span class="p">):</span>
+<div class="viewcode-block" id="BaseGrid.get_submit_args"><a class="viewcode-back" href="../../../server/grid.html#iceprod.server.grid.BaseGrid.get_submit_args">[docs]</a>    <span class="k">def</span> <span class="nf">get_submit_args</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span><span class="n">task</span><span class="p">,</span><span class="n">cfg</span><span class="o">=</span><span class="k">None</span><span class="p">,</span><span class="n">passkey</span><span class="o">=</span><span class="k">None</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Get the submit arguments to start the loader script.&quot;&quot;&quot;</span>
         <span class="c"># get website address</span>
         <span class="k">if</span> <span class="p">(</span><span class="s">&#39;monitor_address&#39;</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">queue_cfg</span> <span class="ow">and</span>
@@ -835,24 +835,24 @@
     <span class="c">### Plugin Overrides ###</span>
 
     <span class="nd">@tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">coroutine</span>
-<div class="viewcode-block" id="grid.get_grid_status"><a class="viewcode-back" href="../../../server/grid.html#iceprod.server.grid.grid.get_grid_status">[docs]</a>    <span class="k">def</span> <span class="nf">get_grid_status</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+<div class="viewcode-block" id="BaseGrid.get_grid_status"><a class="viewcode-back" href="../../../server/grid.html#iceprod.server.grid.BaseGrid.get_grid_status">[docs]</a>    <span class="k">def</span> <span class="nf">get_grid_status</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Get all tasks running on the queue system.</span>
 <span class="sd">           Returns {grid_queue_id:{status,submit_dir}}</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">raise</span> <span class="n">tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">Return</span><span class="p">({})</span></div>
 
     <span class="nd">@tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">coroutine</span>
-<div class="viewcode-block" id="grid.generate_submit_file"><a class="viewcode-back" href="../../../server/grid.html#iceprod.server.grid.grid.generate_submit_file">[docs]</a>    <span class="k">def</span> <span class="nf">generate_submit_file</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span><span class="n">task</span><span class="p">,</span><span class="n">cfg</span><span class="o">=</span><span class="k">None</span><span class="p">,</span><span class="n">passkey</span><span class="o">=</span><span class="k">None</span><span class="p">,</span><span class="n">filelist</span><span class="o">=</span><span class="k">None</span><span class="p">):</span>
+<div class="viewcode-block" id="BaseGrid.generate_submit_file"><a class="viewcode-back" href="../../../server/grid.html#iceprod.server.grid.BaseGrid.generate_submit_file">[docs]</a>    <span class="k">def</span> <span class="nf">generate_submit_file</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span><span class="n">task</span><span class="p">,</span><span class="n">cfg</span><span class="o">=</span><span class="k">None</span><span class="p">,</span><span class="n">passkey</span><span class="o">=</span><span class="k">None</span><span class="p">,</span><span class="n">filelist</span><span class="o">=</span><span class="k">None</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Generate queueing system submit file for task in dir.&quot;&quot;&quot;</span>
         <span class="k">raise</span> <span class="ne">NotImplementedError</span><span class="p">()</span></div>
 
     <span class="nd">@tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">coroutine</span>
-<div class="viewcode-block" id="grid.submit"><a class="viewcode-back" href="../../../server/grid.html#iceprod.server.grid.grid.submit">[docs]</a>    <span class="k">def</span> <span class="nf">submit</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span><span class="n">task</span><span class="p">):</span>
+<div class="viewcode-block" id="BaseGrid.submit"><a class="viewcode-back" href="../../../server/grid.html#iceprod.server.grid.BaseGrid.submit">[docs]</a>    <span class="k">def</span> <span class="nf">submit</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span><span class="n">task</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Submit task to queueing system.&quot;&quot;&quot;</span>
         <span class="k">raise</span> <span class="ne">NotImplementedError</span><span class="p">()</span></div>
 
     <span class="nd">@tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">coroutine</span>
-<div class="viewcode-block" id="grid.remove"><a class="viewcode-back" href="../../../server/grid.html#iceprod.server.grid.grid.remove">[docs]</a>    <span class="k">def</span> <span class="nf">remove</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span><span class="n">tasks</span><span class="p">):</span>
+<div class="viewcode-block" id="BaseGrid.remove"><a class="viewcode-back" href="../../../server/grid.html#iceprod.server.grid.BaseGrid.remove">[docs]</a>    <span class="k">def</span> <span class="nf">remove</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span><span class="n">tasks</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Remove tasks from queueing system.&quot;&quot;&quot;</span>
         <span class="k">pass</span></div></div>
 </pre></div>
