--- a/_modules/iceprod/server/modules/schedule.html
+++ b/_modules/iceprod/server/modules/schedule.html
@@ -202,10 +202,10 @@
 
     <span class="k">def</span> <span class="nf">_master_schedule</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="c"># fake a grid, so we can do grid-like things</span>
-        <span class="kn">from</span> <span class="nn">iceprod.server.grid</span> <span class="k">import</span> <span class="n">grid</span>
+        <span class="kn">from</span> <span class="nn">iceprod.server.grid</span> <span class="k">import</span> <span class="n">BaseGrid</span>
         <span class="n">args</span> <span class="o">=</span> <span class="p">[</span><span class="k">None</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">cfg</span><span class="p">[</span><span class="s">&#39;queue&#39;</span><span class="p">][</span><span class="s">&#39;*&#39;</span><span class="p">],</span> <span class="bp">self</span><span class="o">.</span><span class="n">cfg</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">modules</span><span class="p">,</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">io_loop</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">executor</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">statsd</span><span class="p">]</span>
-        <span class="n">master_grid</span> <span class="o">=</span> <span class="n">grid</span><span class="p">(</span><span class="o">*</span><span class="n">args</span><span class="p">)</span>
+        <span class="n">master_grid</span> <span class="o">=</span> <span class="n">BaseGrid</span><span class="p">(</span><span class="o">*</span><span class="n">args</span><span class="p">)</span>
 
         <span class="c"># make sure the gridftp proxy is set up</span>
         <span class="n">proxy_kwargs</span> <span class="o">=</span> <span class="p">{}</span>
