--- a/_modules/iceprod/server/dbmethods/rpc.html
+++ b/_modules/iceprod/server/dbmethods/rpc.html
@@ -1119,6 +1119,53 @@
 <div class="viewcode-block" id="rpc.rpc_suspend_task"><a class="viewcode-back" href="../../../../server/dbmethods.html#iceprod.server.dbmethods.rpc.rpc.rpc_suspend_task">[docs]</a>    <span class="k">def</span> <span class="nf">rpc_suspend_task</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">task</span><span class="p">):</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">service</span><span class="p">[</span><span class="s">&#39;queue_set_task_status&#39;</span><span class="p">](</span><span class="n">task</span><span class="o">=</span><span class="n">task</span><span class="p">,</span> <span class="n">status</span><span class="o">=</span><span class="s">&#39;suspended&#39;</span><span class="p">)</span></div>
 
+    <span class="nd">@tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">coroutine</span>
+<div class="viewcode-block" id="rpc.rpc_reset_dataset"><a class="viewcode-back" href="../../../../server/dbmethods.html#iceprod.server.dbmethods.rpc.rpc.rpc_reset_dataset">[docs]</a>    <span class="k">def</span> <span class="nf">rpc_reset_dataset</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">dataset_id</span><span class="p">):</span>
+        <span class="n">sql</span> <span class="o">=</span> <span class="s">&#39;select task_id from search &#39;</span>
+        <span class="n">sql</span> <span class="o">+=</span> <span class="s">&#39;where task_status != &quot;complete&quot; and dataset_id = ?&#39;</span>
+        <span class="n">ret</span> <span class="o">=</span> <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">query</span><span class="p">(</span><span class="n">sql</span><span class="p">,</span> <span class="n">bindings</span><span class="p">)</span>
+        <span class="n">tasks</span> <span class="o">=</span> <span class="p">[</span><span class="n">row</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="k">for</span> <span class="n">row</span> <span class="ow">in</span> <span class="n">ret</span><span class="p">]</span>
+
+        <span class="n">sql</span> <span class="o">=</span> <span class="s">&#39;update search set task_status=&quot;idle&quot; &#39;</span>
+        <span class="n">sql</span> <span class="o">+=</span> <span class="s">&#39;where task_status != &quot;complete&quot; and dataset_id = ?&#39;</span>
+        <span class="n">bindings</span> <span class="o">=</span> <span class="p">(</span><span class="n">dataset_id</span><span class="p">,)</span>
+        <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">query</span><span class="p">(</span><span class="n">sql</span><span class="p">,</span> <span class="n">bindings</span><span class="p">)</span>
+
+        <span class="n">sql</span> <span class="o">=</span> <span class="s">&#39;update task set status=&quot;idle&quot; &#39;</span>
+        <span class="n">sql</span> <span class="o">+=</span> <span class="s">&#39;where status != &quot;complete&quot; and task_id in (%s)&#39;</span>
+        <span class="k">for</span> <span class="n">f</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">_bulk_select</span><span class="p">(</span><span class="n">sql</span><span class="p">,</span> <span class="n">tasks</span><span class="p">):</span>
+            <span class="k">yield</span> <span class="n">f</span>
+
+        <span class="n">sql</span> <span class="o">=</span> <span class="s">&#39;update dataset set status=&quot;processing&quot; where dataset_id = ?&#39;</span>
+        <span class="n">bindings</span> <span class="o">=</span> <span class="p">(</span><span class="n">dataset_id</span><span class="p">,)</span>
+        <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">query</span><span class="p">(</span><span class="n">sql</span><span class="p">,</span> <span class="n">bindings</span><span class="p">)</span></div>
+
+    <span class="nd">@tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">coroutine</span>
+<div class="viewcode-block" id="rpc.rpc_hard_reset_dataset"><a class="viewcode-back" href="../../../../server/dbmethods.html#iceprod.server.dbmethods.rpc.rpc.rpc_hard_reset_dataset">[docs]</a>    <span class="k">def</span> <span class="nf">rpc_hard_reset_dataset</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">dataset_id</span><span class="p">):</span>
+        <span class="n">sql</span> <span class="o">=</span> <span class="s">&#39;select task_id from search &#39;</span>
+        <span class="n">sql</span> <span class="o">+=</span> <span class="s">&#39;where dataset_id = ?&#39;</span>
+        <span class="n">ret</span> <span class="o">=</span> <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">query</span><span class="p">(</span><span class="n">sql</span><span class="p">,</span> <span class="n">bindings</span><span class="p">)</span>
+        <span class="n">tasks</span> <span class="o">=</span> <span class="p">[</span><span class="n">row</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="k">for</span> <span class="n">row</span> <span class="ow">in</span> <span class="n">ret</span><span class="p">]</span>
+
+        <span class="n">sql</span> <span class="o">=</span> <span class="s">&#39;update search set task_status=&quot;idle&quot; &#39;</span>
+        <span class="n">sql</span> <span class="o">+=</span> <span class="s">&#39;where dataset_id = ?&#39;</span>
+        <span class="n">bindings</span> <span class="o">=</span> <span class="p">(</span><span class="n">dataset_id</span><span class="p">,)</span>
+        <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">query</span><span class="p">(</span><span class="n">sql</span><span class="p">,</span> <span class="n">bindings</span><span class="p">)</span>
+
+        <span class="n">sql</span> <span class="o">=</span> <span class="s">&#39;update task set status=&quot;idle&quot; &#39;</span>
+        <span class="n">sql</span> <span class="o">+=</span> <span class="s">&#39;where task_id in (%s)&#39;</span>
+        <span class="k">for</span> <span class="n">f</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">_bulk_select</span><span class="p">(</span><span class="n">sql</span><span class="p">,</span> <span class="n">tasks</span><span class="p">):</span>
+            <span class="k">yield</span> <span class="n">f</span>
+
+        <span class="n">sql</span> <span class="o">=</span> <span class="s">&#39;update dataset set status=&quot;processing&quot; where dataset_id = ?&#39;</span>
+        <span class="n">bindings</span> <span class="o">=</span> <span class="p">(</span><span class="n">dataset_id</span><span class="p">,)</span>
+        <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">query</span><span class="p">(</span><span class="n">sql</span><span class="p">,</span> <span class="n">bindings</span><span class="p">)</span></div>
+        
+    <span class="nd">@tornado</span><span class="o">.</span><span class="n">gen</span><span class="o">.</span><span class="n">coroutine</span>
+<div class="viewcode-block" id="rpc.rpc_suspend_dataset"><a class="viewcode-back" href="../../../../server/dbmethods.html#iceprod.server.dbmethods.rpc.rpc.rpc_suspend_dataset">[docs]</a>    <span class="k">def</span> <span class="nf">rpc_suspend_dataset</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">dataset_id</span><span class="p">):</span>
+        <span class="n">sql</span> <span class="o">=</span> <span class="s">&#39;update dataset set status=&quot;suspended&quot; where dataset_id = ?&#39;</span>
+        <span class="n">bindings</span> <span class="o">=</span> <span class="p">(</span><span class="n">dataset_id</span><span class="p">,)</span>
+        <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">db</span><span class="o">.</span><span class="n">query</span><span class="p">(</span><span class="n">sql</span><span class="p">,</span> <span class="n">bindings</span><span class="p">)</span></div>
 
     <span class="c">### Public Methods ###</span>
 
