--- a/iceprod/server/data/www_templates/dataset_detail.html
+++ b/iceprod/server/data/www_templates/dataset_detail.html
@@ -29,6 +29,14 @@
 {% end %}
 </table>
 
+{% if (current_user) %}
+<div style="padding:10px;">
+    <a href='javascript:call("reset_dataset");'>Reset</a>
+    <a href='javascript:call("hard_reset_dataset");'>Hard Reset</a>
+    <a href='javascript:call("suspend_dataset");'>Suspend</a>
+</div>
+{% end %}
+
 <h2>Tasks</h2>
 
 <div class="tasks">
@@ -81,5 +89,21 @@
         {% end %}
     </table>
 </div>
+
+{% end %}
+
+{% block body_scripts %}
+
+{% if (current_user) %}
+<script type="text/javascript" src="/static/json-rpc.js"></script>
+<script type="text/javascript">
+    var dataset_id = "{{ dataset_id }}";
+    function call(func_name){
+        RPCclient(func_name, {passkey: "{{ passkey }}", dataset_id:dataset_id }, callback=function(return_data){
+            location.reload(true);
+        });
+    };
+</script>
+{% end %}
 
 {% end %}
