--- a/iceprod/server/data/www_templates/task_detail.html
+++ b/iceprod/server/data/www_templates/task_detail.html
@@ -49,7 +49,8 @@
     var task = "{{ task['task_id'] }}";
     function call(func_name){
         RPCclient(func_name, {passkey: "{{ passkey }}", task:task }, callback=function(return_data){
-                  });
+            location.reload(true);
+        });
     };
 </script>
 {% end %}
